crates/cli/tests/snapshots/unused_inherit__fix_5dc182c3eed35b35907bc4063890a7c104820ca0fa4f9b388ee03f070304384a.snap
---
source: crates/cli/tests/unused_inherit.rs
expression: "\"let inherit (lib) mkIf; keep = 1; in lib.mkIf (keep == keep) {}\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let inherit (lib) mkIf; keep = 1; in lib.mkIf (keep == keep) {}
+let keep = 1; in lib.mkIf (keep == keep) {}
