crates/cli/tests/snapshots/unused_inherit__fix_aa5c46d9d36e4c0fd5a82852a3c30fae1044edfc0e1e8efb930b92d8f3b8a581.snap
---
source: crates/cli/tests/unused_inherit.rs
expression: "\"let inherit foo bar; in foo\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let inherit foo bar; in foo
+let inherit foo; in foo
