crates/cli/tests/snapshots/unused_inherit__fix_ec295919097410adc6e956e3476093bc4029949e4531fc98d4d2a87daf584c5d.snap
---
source: crates/cli/tests/unused_inherit.rs
expression: "\"let inherit (lib) mkIf mkOption types; in mkIf true {}\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let inherit (lib) mkIf mkOption types; in mkIf true {}
+let inherit (lib) mkIf; in mkIf true {}
