crates/cli/tests/snapshots/unused_inherit__lint_5dc182c3eed35b35907bc4063890a7c104820ca0fa4f9b388ee03f070304384a.snap
---
source: crates/cli/tests/unused_inherit.rs
expression: "\"let inherit (lib) mkIf; keep = 1; in lib.mkIf (keep == keep) {}\""
---
[37] Warning: Inherited name is never used
   ╭─[<temp_file_path>:1:5]
   │
 1 │ let inherit (lib) mkIf; keep = 1; in lib.mkIf (keep == keep) {}
   │     ─────────┬─────────  
   │              ╰─────────── mkIf is inherited but never used
───╯
