crates/cli/tests/snapshots/unused_inherit__lint_666a0bb60d128647937408e06fc3b5dcc63175cb1094991b7edca6e72edc2100.snap
---
source: crates/cli/tests/unused_inherit.rs
expression: "\"let inherit (lib) mkIf; in { inherit mkIf; }\""
---

