crates/cli/tests/snapshots/unused_inherit__lint_aa5c46d9d36e4c0fd5a82852a3c30fae1044edfc0e1e8efb930b92d8f3b8a581.snap
---
source: crates/cli/tests/unused_inherit.rs
expression: "\"let inherit foo bar; in foo\""
---
[37] Warning: Inherited name is never used
   ╭─[<temp_file_path>:1:5]
   │
 1 │ let inherit foo bar; in foo
   │     ────────┬───────  
   │             ╰───────── bar is inherited but never used
───╯
