crates/cli/tests/snapshots/unused_inherit__lint_b8a6cee15ce3b82de25c87a44977254ff137d0d7829e4bf616fea3bcd62b7a4d.snap
---
source: crates/cli/tests/unused_inherit.rs
expression: "\"let inherit (lib) mkIf; in mkIf true {}\""
---

