crates/cli/tests/snapshots/unused_inherit__lint_ec295919097410adc6e956e3476093bc4029949e4531fc98d4d2a87daf584c5d.snap
---
source: crates/cli/tests/unused_inherit.rs
expression: "\"let inherit (lib) mkIf mkOption types; in mkIf true {}\""
---
[37] Warning: Inherited name is never used
   ╭─[<temp_file_path>:1:5]
   │
 1 │ let inherit (lib) mkIf mkOption types; in mkIf true {}
   │     ─────────────────┬────────────────  
   │                      ╰────────────────── mkOption, types are inherited but never used
───╯
